# stw-mensa-api

./: Cargo.toml  ecosystem.config.js  readme.md
src/: config.rs  main.rs  menu.rs
