[package]
name = "fuber-eats-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", default-features = false, features = ["tokio-rustls"] }
scraper = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

